# refactory

./: Cargo.toml
asset_transformer/: Cargo.toml
asset_transformer/examples/: image_converter.rs
asset_transformer/src/: lib.rs
atlas/: Cargo.toml
atlas/assets/tile_entities/: assembler.meta.yml
atlas/src/: lib.rs
config_asset/: Cargo.toml
config_asset/assets/: config.yml
config_asset/examples/: processor.rs
config_asset/src/: lib.rs
entity_handle/examples/: simple.rs
entity_handle/src/: handles.rs  lib.rs  markers.rs
entity_handle/tests/: 00_spawn_despawn.rs  01_intent_lifecycle.rs  03_to_managed_existing_entity.rs
game/: Cargo.toml
game/assets/tile_entities/: belts.meta.yml
game/assets/tiles/: tiles.meta.yml
game/src/: main.rs
games/game/: Cargo.toml
games/showcases/: Cargo.toml
games/space-game/: Cargo.toml
games/tower-defense/: Cargo.toml  README.md
games/tower-defense/src/: asd.rs  main.rs  spawner.rs  suspend.rs
games/tower-defense/src/objects/: bullet.rs  mod.rs  player.rs  turret.rs  unit.rs
games/tower-defense/src/objects/player/: character.rs  hand.rs  mod.rs
games/tower-defense/src/plugins/: cary.rs  debug.rs  health.rs  mod.rs  physics.rs  targeting.rs
handle_transformer/: Cargo.toml
handle_transformer/examples/: image_converter.rs
handle_transformer/src/: lib.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/async_service/: Cargo.toml
shared/async_service/examples/: image_converter.rs
shared/async_service/src/: lib.rs
shared/atlas/: Cargo.toml
shared/atlas/assets/tile_entities/: assembler.meta.yml  belts.meta.yml
shared/atlas/src/: common_sequences.rs  entries.rs  lib.rs
shared/config_asset/: Cargo.toml
shared/dyn_node/: Cargo.toml
shared/dyn_node/examples/: processor.rs
shared/dyn_node/src/: lib.rs
shared/entity_handle/: Cargo.toml
shared/entity_handle/examples/: explicit_intent.rs
shared/entity_handle/src/: query.rs
shared/entity_handle/tests/: 02_asset_identity_and_query.rs  04_reacquire_safety.rs
shared/on_asset_loaded/: Cargo.toml
shared/on_asset_loaded/examples/: README.MD  image_converter.rs
shared/on_asset_loaded/src/: components.rs  lib.rs
shared/registry/examples/: simple.rs
yml_sub_asset/: Cargo.toml
yml_sub_asset/assets/: config.yml
yml_sub_asset/examples/: simple.rs
yml_sub_asset/src/: lib.rs
