[workspace]
members = [
    "games/game",
    "shared/on_asset_loaded",
    "shared/atlas",
    "shared/entity_handle",
    "shared/config_asset",
    "shared/registry",
]
resolver = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[workspace.dependencies]
on_asset_loaded = { path = "shared/on_asset_loaded" }
atlas = { path = "shared/atlas" }
entity_handle = { path = "shared/entity_handle" }
config_asset = { path = "shared/config_asset" }
registry = { path = "shared/registry" }
