[workspace]
members = [
    # shared
    "shared/atlas",
    "shared/dyn_node",
    "shared/async_service",
    # games
    "games/game",
    "games/showcases", "games/space-game", "games/tower-defense",
]
resolver = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[workspace.dependencies]
atlas = { path = "shared/atlas" }
dyn_node = { path = "shared/dyn_node" }
async_service = { path = "shared/async_service" }
