[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
