[package]
name = "yml_sub_asset"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = { version = "0.18.0", default-features = false }
bevy_asset = { version = "0.18.0", default-features = false }
bevy_reflect = { version = "0.18.0", default-features = false }
bevy_ecs = { version = "0.18.0", default-features = false }
bevy_tasks = { version = "0.18.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
futures-core = "0.3.32"

[dev-dependencies]
bevy = { version = "0.18.0" }
