[package]
name = "dyn_node"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["bevy_asset"] }
derive_more = { version = "2.1.1", features = ["deref", "from"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# optional
on_asset_loaded = { workspace = true }
bevy_common_assets = { version = "0.15.0", optional = true }

[features]
default = []
json = ["bevy_common_assets/json"]
cbor = ["bevy_common_assets/cbor"]
ron = ["bevy_common_assets/ron"]
toml = ["bevy_common_assets/toml"]
yaml = ["bevy_common_assets/yaml"]

[[example]]
name = "processor"
required-features = ["yaml"]
